css/styles-body.css
/*  */
/******************* Hero *******************/

.hero {
    background-color: #FFF;
    /* fixing random thin line between blocks */
    margin-top: -1px;
    padding-bottom: 80px;
    padding-left: 16px;
    padding-right: 16px;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr .05fr;
    grid-template-areas: 
    "heroIllustration heroIllustration heroIllustration heroIllustration"
    "heroText heroText heroText heroText"
    "animatelogo animatelogo animatelogo animatelogo";

}

.heroIllustration img {
    /* set illustration width to 100% of the container size */
    max-width: 90%;
}
.heroText {
    /* use margin to align text with image */
    margin-right: 16px; 
    margin-top: 10px;
    grid-area: heroText;

}
.heroIllustration {
    grid-area: heroIllustration;
    /* checking to see if I can use a flexbox to scale pic */
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}
.heroText h1 {
    font-size: 34px;
    font-weight: bold;
    color: #023246;
    letter-spacing: 0.08em;
}
.heroText h2 {
    font-size: 20px;
    font-weight: 300;
    color: #023246;
}
.heroText p {
    font-size: 16px;
    font-weight: 300;
    color: #023246;
    width: 100%;
}

.buttonCTA {
    border: none;
    background-color: #38C1F9;
    color: #000000;
    border-radius: 2px;
    font-size: 14px;
    padding: 10px;
}

.buttonCTA:hover  {
    background-color: #023246;
    color: #F6F6F6;
    transition: background-color color .3s;
    transition: color .3s;
}



/* hiding CTA under illustration for mobile */
.heroIllustration .buttonCTA { visibility: hidden;}

/* TEST ---- display: none replaced display: flex */
.animatelogo {
    display: none;
    justify-content: center;
    align-items: flex-end;
    grid-area: animatelogo;
}


/******************* My Process *******************/


.myProcessSection {
    padding: 40px 16px;
    background-color: #FFF;
    /* box-sizing: border-box; */
    color: #023246;
}

/* .blockTitle{
    background-color: #023246;
    color: #F6F6F6;
    max-width: 98%;
    margin-left: -16px;
} */
/* .blockTitle h2 {
    padding-top: 20px ;
    padding-bottom: 20px;
    padding-left: 16px;
} */

.processGrid {
    text-align: center;
    display: grid;
    /* 1x14 Grid */
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr;
    grid-template-areas: 
    "discover"
    "line1"
    "define"
    "line2"
    "develop"
    "line3"
    "deliver";
}

/* alias grid items to apply to grid-template-areas */
#discover {grid-area: discover;}
#define {grid-area: define;}
#develop {grid-area: develop;}
#deliver {grid-area: deliver;}

/* alias connecting lines to place in grid*/
#line1 {grid-area: line1;}
#line2 {grid-area: line2;}
#line3 {grid-area: line3;}
/* #line4 {grid-area: line4;}
#line5 {grid-area: line5;}
#line6 {grid-area: line6;} */

/* bolder text for each phase */
.phase {font-weight: 700;}
.phaseText {margin: auto auto; color: #023246;}

/* set explanation text lighter weight for hierarchy */
.phaseText p { 
    font-weight: 300; 
    font-size: 14px; 
    display: inline-block; 
    margin: 0 0;
    width: 55%;
    margin: auto auto;
}

/* setup connecting lines */
.line {
    width: 2px;
    height: 60px;
    background-color: #023246;
    display: inline-block;
    margin: auto auto;
    padding: 0;
}



.myProcessSection h2{margin-bottom: 24px;}

/* scale all illustrations in grid to 50% */
.myProcessSection img {width: 50%;}

/******************* Portfolio *******************/
/* setup frame */
.portfolio { 
    padding-left: 16px;
    padding-right: 16px;
    padding-top: 32px;
    background-color: #FFFFFF;
}
/* setup title and subtitle */
.portfolio h2 { margin: 48px 0 24px 0; }
.portfolioSub {display: flex;}
#bar {
    display: inline-block;
    background-color: #023246;
    width: 16px;
    height: 4rem;
    margin-right: 8px;
}
.portfolio h3 { 
    font-weight: 300; 
    display: inline;
}

/* Portfolio grid for entries */
.portfolioGrid {
    display: grid;
    /*  Grid */
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr;
    grid-template-areas: 
    "wrcdvCover "
    "wrcdvChoice"
    "travelCover"
    "travelChoice"
    "goodEatsCover"
    "goodEatsChoice";
    margin-top: 64px;
}
/* covers */
.cover img {
    display: block;
    width: 90%;
    height: auto;  
    /* Adding drop shadows to the project cover images */
    /* offset-x | offset-y | blur-radius | spread-radius | color */
    box-shadow: 0px 84px 30px -60px rgba(196, 196, 196, 0.8);
}
.cover {
    margin-bottom: 40px;
} 


/* layout the entry section, image on left, text/button on right */


#wrcdvCover {
    grid-area: wrcdvCover;
}
#travelCover {
    grid-area: travelCover;
}
#goodEatsCover {
    grid-area: goodEatsCover;
}
/* Titles + see more buttons */
#wrcdvChoice {
    grid-area: wrcdvChoice;
}
#travelChoice {
    grid-area: travelChoice;
}
#goodEatsChoice {
    grid-area: goodEatsChoice;
}

/* style text & buttons for portfolio entries */
.projectChoice {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
}
.projectChoice button {
    background-color: #38C1F9;
    border-radius: 2px;
    padding: 12px 32px;
    color: #023246;
    font-weight: 500;
    font-size: 14px;
}
.projectChoiceTitle { 
    /* make text block moveable */
    display: inline-block;
}
.projectChoiceTitle h4 { 
    font-weight: 500;
    font-size: 16px;
    margin-top: 0px;
    margin-bottom: 4px;
 }
.projectChoiceTitle h5 { 
    font-weight: 300;
    font-size: 12px;
    margin-top: 0px;
 }

 /******************* About Section *******************/
.about {
    padding: 16px;
}
.about img {
    width: 100%;
}

#aboutMeTitle {
    display: block;
    color: #023246;
    grid-area: aboutMeTitle;

}
.about h2 {
    font-size: 18px;
    font-weight: 400;
}
.about p {
    font-size: 14px;
    font-weight: 300;
}
/* ... */

